[gd_scene load_steps=6 format=3 uid="uid://lsqrqv3xw3ia"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_oxslj"]
[ext_resource type="Script" path="res://scripts/mouse.gd" id="2_nu3no"]
[ext_resource type="Theme" uid="uid://cujwxpvp1qx1n" path="res://themes/mcsm.tres" id="3_kaspj"]
[ext_resource type="Texture2D" uid="uid://ru4fosgamrvj" path="res://images/parts/white_square.png" id="3_u6ieo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2bxo8"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxslj")

[node name="Mouse" type="Node2D" parent="."]
script = ExtResource("2_nu3no")

[node name="Area2D" type="Area2D" parent="Mouse"]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse/Area2D"]
shape = SubResource("CircleShape2D_2bxo8")
debug_color = Color(1, 1, 1, 0.419608)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.117188, 0.117188, 0.117188, 1)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 38.0
grow_horizontal = 2
texture = ExtResource("3_u6ieo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.05
theme = ExtResource("3_kaspj")

[node name="File" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "File"
item_count = 2
item_0/text = "Load"
item_0/id = 0
item_1/text = "Save"
item_1/id = 1

[node name="Skin" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "File"
item_count = 1
item_0/text = "New"
item_0/id = 0

[node name="Cape" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "File"
item_count = 2
item_0/text = "Add"
item_0/id = 0
item_1/text = "Unknown Capes"
item_1/id = 1

[node name="Order" type="PopupMenu" parent="VBoxContainer/MenuBar"]
title = "File"
item_count = 2
item_0/text = "Random"
item_0/id = 0
item_1/text = "Alphabetical"
item_1/id = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_kaspj")
follow_focus = true
horizontal_scroll_mode = 0

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_kaspj")
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
alignment = 1

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/File" to="." method="_on_file_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Skin" to="." method="_on_skin_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Cape" to="." method="_on_cape_id_pressed"]
[connection signal="id_pressed" from="VBoxContainer/MenuBar/Order" to="." method="_on_order_id_pressed"]
